# seleniumgrid-pytest

./: .gitignore  README.md  application.py  conftest.py  pyproject.toml  pytest.ini
adhoc/: test_test1.py  test_test2.py
scripts/: install.sh  run-test.sh
scripts/config/: hubconfig.json  node1config.json  node2config.json
