[tool.poetry]
name = "test-seleniumgrid"
version = "0.1.0"
description = ""
authors = ["jasminexie <ameliasgoldfish@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
selenium = "^3.141"
flake8 = "^3.6"
pytest-xdist = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
